--- a/packages/base/CartList/ui/index.css
+++ b/packages/base/CartList/ui/index.css
@@ -1,37 +1,16 @@
-.menu-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.cart-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.cart-item-row {
   margin-bottom: 1rem;
 }
 
-.cart-wrapper {
-  position: relative; /* Så vi kan placera ikoner absolut inuti */
-  width: 64px; /* Bestäm en fast storlek för wrappern */
-  height: 64px;
-  cursor: pointer;
-}
-
-.cart-icon {
-  position: absolute;
-  top: -15px;
-  left: -15px;
-}
-
-.cart-badge {
-  position: absolute;
-  top: -10px;
-  right: -10px;
-  background-color: red;
-  color: #fff;
-  border-radius: 50%;
-  padding: 2px 6px;
-  font-size: 0.8rem;
-}
-
-.union-icon {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+.cart-buttons {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  margin-top: 0.5rem;
 }
