--- a/packages/base/MenuSection/ui/index.css
+++ b/packages/base/MenuSection/ui/index.css
@@ -1,12 +1,13 @@
 .menu-list {
   list-style: none;
   padding: 0;
-  margin-top: 1.5rem;
+  margin: 0; /* valfritt avstånd upp/ned */
 }
 
 .menu-item {
-  margin-bottom: 1.5rem;
-  cursor: pointer; /* Ger klickbar markör */
+  margin: 0 -1rem;
+  padding: 1rem 1rem;
+  cursor: pointer;
 }
 
 .menu-item:hover {
